cut immages to necessary sizes

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						в стилях репкор, хіп-хоп, рок та фанк. </p>
 					</li>
 					<li><div class="border-img">
-							<img id="bumbox-img" src="images/bands/bumbox/bumbox.jpeg">
+							<img id="bumbox-img" src="images/bands/bumbox/bumbox.jpg">
 						</div>
 						<p class="about" id="bumbox-about">"Бумбокс" - український хіп-хоп і фанкі-ґрув гурт, нової генерації 
 						із дужу самобутнім виконанням пісень.</p>
