cut immages to necessary sizes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						із дужу самобутнім виконанням пісень.</p>
 					</li>
 					<li><div class="border-img">
-							<img id="skaj-img" src="images/bands/skaj/skaj.jpg">
+							<img id="skaj-img" src="images/bands/skaj/skaj.png">
 						</div>
 						<p class="about" id="skaj-about">«СКАЙ» — український музичний гурт, основними трьома напрямками якого є альтернативний рок, 
 						поп-рок та риси нової хвилі пост-панку. </p>
