--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Oranienbaum|PT+Serif|Tinos" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+        <!-- Latest compiled and minified CSS -->
+<!--		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">  -->
+
+		<!-- Optional theme -->
+<!--		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">   -->
+
     </head>
     <body>
         <header>
             <nav>     
                 <p class="menu">
-                   	<a class="menu-button" href="oe.html">Bands &ensp;&nbsp;</a>
-                	<a class="menu-button" href="#">About &ensp;&nbsp;</a>   
+                   	<a class="menu-button" href="#">Home</a>
+                	<a class="menu-button" href="#">About</a>   
                 	<a class="menu-button" href="#">Contacts</a>
                 </p>
             </nav>
@@ -124,7 +131,9 @@
 			integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 			crossorigin="anonymous"></script>
 		<script type="text/javascript" src="js/index.js"></script> 
-	
+		
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		
 
     </body>
