add many changes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Great-7</title>
+
         <link rel="stylesheet" href="css/index.css" type="text/css"> 
         <link rel="shortcut icon" href="images/ico/g-2-favicon-16x16.png" type="image/png">
         <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
@@ -11,11 +12,6 @@
         <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Oranienbaum|PT+Serif|Tinos" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <!-- Latest compiled and minified CSS -->
-<!--		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">  -->
-
-		<!-- Optional theme -->
-<!--		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">   -->
 
     </head>
     <body>
@@ -23,8 +19,8 @@
             <nav>     
                 <p class="menu">
                    	<a class="menu-button" href="#">Home</a>
-                	<a class="menu-button" href="#">About</a>   
-                	<a class="menu-button" href="#">Contacts</a>
+                	<a class="menu-button" href="about.html">About</a>   
+                	<a class="menu-button" href="contacts.html">Contacts</a>
                 </p>
             </nav>
         </header>
@@ -73,53 +69,51 @@
 			<article class="col2">
 				<ul class="img-bands-about">
 					<li><div class="border-img">
-							<img id="pt-img" src="images/bands/pt/pt.jpg">
+							<img sytle="z-index: 1;" src="images/bands/oe/oe-01.jpg" alt="okean-elzy.jpg">
 						</div>
-						<p class="about" id="pt-about">«Піккарді́йська Те́рція» (Вокальна формація «Піккардійська Терція») 
-						— українська акапельна формація - справжнє явище в українській музичній культурі.</p>
 					</li>
 					<li><div class="border-img">
-							<img id="tnmk-img" src="images/bands/tnmk/tnmk.jpg">
-						</div>
-						<p class="about" id="tnmk-about">«Танок на Майдані Конґо» («ТНМК») — український гурт, що виконує музику 
-						в стилях репкор, хіп-хоп, рок та фанк. </p>
-					</li>
-					<li><div class="border-img">
-							<img id="bumbox-img" src="images/bands/bumbox/bumbox.jpg">
-						</div>
-						<p class="about" id="bumbox-about">"Бумбокс" - український хіп-хоп і фанкі-ґрув гурт, нової генерації 
-						із дужу самобутнім виконанням пісень.</p>
-					</li>
-					<li><div class="border-img">
-							<img id="skaj-img" src="images/bands/skaj/skaj.png">
-						</div>
-						<p class="about" id="skaj-about">«СКАЙ» — український музичний гурт, основними трьома напрямками якого є альтернативний рок, 
-						поп-рок та риси нової хвилі пост-панку. </p>
-					</li> 	
-					<li><div class="border-img">
-							<img id="tartak-img" src="images/bands/tartak/tartak.jpg">
-						</div>
-						<p class="about" id="tartak-about">«Тартак» — український музичний гурт,так щільно посів своє місце в українській музиці, 
-						що здається став органічною частиною життя.  Жанр - альтернативний рок, репкор панк-рок, реп-рок та фанк.</p>
-					</li> 
-					<li><div class="border-img">
-							<img id="skrjabin-img" src="images/bands/skrjabin/skrjabin-1.jpg">
-						</div>
-						<p class="about" id="skrjabin-about">«Скрябін» — український музичний гурт, що за час своєї творчої активності 
-						пройшов шлях від синті-попу, постпанку і техно до нової романтики та поп-року.</p>
-					</li>
-					<li><div class="border-img">
-							<img id="oe-img" src="images/bands/oe/oe1.jpg">
+							<img id="oe-img" src="images/bands/oe/oe-01.jpg" alt="okean-elzy.jpg">
 						</div>
 						<p class="about" id="oe-about">"Океан Ельзи" - багаторазово визнані публікою й критиками 
 						як краща рок-група і краща live-група СНД і Східної Європи.</p>
 					</li>
 					<li><div class="border-img">
-							<img sytle="z-index: 1;" src="images/bands/oe/oe1.jpg">
-							<p id="background-about">"Океан Ельзи" - багаторазово визнані публікою й критиками 
-						як краща рок-група і краща live-група СНД і Східної Європи.</p>
+							<img id="skrjabin-img" src="images/bands/skrjabin/skrjabin-1.jpg" alt="skrjabin.jpg">
 						</div>
-						</li>
+						<p class="about" id="skrjabin-about">«Скрябін» — український музичний гурт, що за час своєї творчої активності 
+						пройшов шлях від синті-попу, постпанку і техно до нової романтики та поп-року.</p>
+					</li> 	
+					<li><div class="border-img">
+							<img id="tartak-img" src="images/bands/tartak/tartak.jpg" alt="tartak.jpg">
+						</div>
+						<p class="about" id="tartak-about">«Тартак» — український музичний гурт,так щільно посів своє місце в українській музиці, 
+						що здається став органічною частиною життя.  Жанр - альтернативний рок, репкор панк-рок, реп-рок та фанк.</p>
+					</li>
+					<li><div class="border-img">
+							<img id="skaj-img" src="images/bands/skaj/skaj.png" alt="skaj.png">
+						</div>
+						<p class="about" id="skaj-about">«СКАЙ» — український музичний гурт, основними трьома напрямками якого є альтернативний рок, 
+						поп-рок та риси нової хвилі пост-панку. </p>
+					</li>
+					<li><div class="border-img">
+							<img id="bumbox-img" src="images/bands/bumbox/bumbox.jpg" alt="bumbox.jpg">
+						</div>
+						<p class="about" id="bumbox-about">"Бумбокс" - український хіп-хоп і фанкі-ґрув гурт, нової генерації 
+						із дужу самобутнім виконанням пісень.</p>
+					</li> 
+					<li><div class="border-img">
+							<img id="tnmk-img" src="images/bands/tnmk/tnmk.jpg" alt="tnmk.jpg">
+						</div>
+						<p class="about" id="tnmk-about">«Танок на Майдані Конґо» («ТНМК») — український гурт, що виконує музику 
+						в стилях репкор, хіп-хоп, рок та фанк. </p>
+					</li>
+					<li><div class="border-img">
+							<img id="pt-img" src="images/bands/pt/pt.jpg" alt="pikkardijska-tercija.jpg">
+						</div>
+						<p class="about" id="pt-about">«Піккарді́йська Те́рція» (Вокальна формація «Піккардійська Терція») 
+						— українська акапельна формація - справжнє явище в українській музичній культурі.</p>
+					</li>
 			
 				</ul>
 			</article>
@@ -131,10 +125,6 @@
 			integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 			crossorigin="anonymous"></script>
 		<script type="text/javascript" src="js/index.js"></script> 
-		
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-		
 
     </body>
 </html>
