add many changes

--- a/oe.html
+++ b/oe.html
@@ -380,7 +380,7 @@
                  
             <footer>
                 <p>When creating the site was used information from Wikipedia<br>
-                &#169; Copyright 2016 Roman Mylenkyj &ensp; | &ensp; For all questions write to my e-mail: r.mylenjkyj@gmail.com</p>
+                &#169; Copyright 2016 Roman Mylenkyi &ensp; | &ensp; For all questions write to my e-mail: r.mylenjkyj@gmail.com</p>
             </footer>
         
         </section>
