--- a/oe.html
+++ b/oe.html
@@ -81,55 +81,55 @@
             <section id="fixed-player">
                <h3 style="text-align: center">Слухати вибране</h3>
                <ul> 
-                   <li><section class="music"><p> Лелеки </p>
+                   <li><section class="music"><p>&ensp; Лелеки </p>
                    <audio controls>
                        <source src="audio/oe/oe-leleki.mp3" type="audio/mpeg" preload="auto">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
-                   <li><section class="music"><p> На небі </p>
+                   <li><section class="music"><p>&ensp; На небі </p>
                    <audio controls>
                        <source src="audio/oe/oe-na-nebі.mp3" type="audio/mpeg" preload="auto">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
-                   <li><section class="music"><p> Обійми </p>
+                   <li><section class="music"><p>&ensp; Обійми </p>
                    <audio controls>
                        <source src="audio/oe/oe-obijmy.mp3" type="audio/mpeg" preload="auto">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
-                   <li><section class="music"><p> Сосни </p>
+                   <li><section class="music"><p>&ensp; Сосни </p>
                    <audio controls>
                        <source src="audio/oe/oe-sosni.mp3" type="audio/mpeg" preload="auto">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
-                   <li><section class="music"><p> Стріляй </p>
+                   <li><section class="music"><p>&ensp; Стріляй </p>
                    <audio controls>
                        <source src="audio/oe/oe-striljaj.mp3" type="audio/mpeg" preload="auto">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
-                   <li><section class="music"><p> Ти квітка </p>
+                   <li><section class="music"><p>&ensp; Ти квітка </p>
                    <audio controls>
                        <source src="audio/oe/oe-ti-kvitka.mp3" type="audio/mpeg" preload="auto">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
-                   <li><section class="music"><p> Ти собі сама </p>
+                   <li><section class="music"><p>&ensp; Ти собі сама </p>
                    <audio controls>
                        <source src="audio/oe/oe-ti-sobi-sama.mp3" type="audio/mpeg" preload="auto">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
-                   <li><section class="music"><p> Не йди </p>
+                   <li><section class="music"><p>&ensp; Не йди </p>
                    <audio controls>
                        <source src="audio/oe/oe-ne-jdy.mp3" type="audio/mpeg" preload="auto">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
-                   <li><section class="music"><p> Без бою </p>
+                   <li><section class="music"><p>&ensp; Без бою </p>
                    <audio controls>
                        <source src="audio/oe/oe-bez-boju.mp3" type="audio/mpeg" preload="auto">
                        Ваш браузур не підтримує відтворення mp3
