--- a/oe.html
+++ b/oe.html
@@ -412,7 +412,7 @@
             </section>  
                  
             <footer>
-                <p>When creating the site was used information from Wikipedia<br>
+                <p>When created this site were used materials from Wikipedia<br>
                 &#169; Copyright 2016 Roman Mylenkyi &ensp; | &ensp; For all questions write to my e-mail: r.mylenjkyj@gmail.com</p>
             </footer>
         
