--- a/oe.html
+++ b/oe.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <title>G-7 Ocean Elzy</title>
@@ -83,55 +83,55 @@
                <ul> 
                    <li><section class="music"><p>&ensp; Лелеки </p>
                    <audio controls>
-                       <source src="audio/oe/oe-leleki.mp3" type="audio/mpeg" preload="auto">
+                       <source src="audio/oe/oe-leleki.mp3" type="audio/mpeg">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
                    <li><section class="music"><p>&ensp; На небі </p>
                    <audio controls>
-                       <source src="audio/oe/oe-na-nebі.mp3" type="audio/mpeg" preload="auto">
+                       <source src="audio/oe/oe-na-nebі.mp3" type="audio/mpeg">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
                    <li><section class="music"><p>&ensp; Обійми </p>
                    <audio controls>
-                       <source src="audio/oe/oe-obijmy.mp3" type="audio/mpeg" preload="auto">
+                       <source src="audio/oe/oe-obijmy.mp3" type="audio/mpeg">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
                    <li><section class="music"><p>&ensp; Сосни </p>
                    <audio controls>
-                       <source src="audio/oe/oe-sosni.mp3" type="audio/mpeg" preload="auto">
+                       <source src="audio/oe/oe-sosni.mp3" type="audio/mpeg">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
                    <li><section class="music"><p>&ensp; Стріляй </p>
                    <audio controls>
-                       <source src="audio/oe/oe-striljaj.mp3" type="audio/mpeg" preload="auto">
+                       <source src="audio/oe/oe-striljaj.mp3" type="audio/mpeg">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
                    <li><section class="music"><p>&ensp; Ти квітка </p>
                    <audio controls>
-                       <source src="audio/oe/oe-ti-kvitka.mp3" type="audio/mpeg" preload="auto">
+                       <source src="audio/oe/oe-ti-kvitka.mp3" type="audio/mpeg">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
                    <li><section class="music"><p>&ensp; Ти собі сама </p>
                    <audio controls>
-                       <source src="audio/oe/oe-ti-sobi-sama.mp3" type="audio/mpeg" preload="auto">
+                       <source src="audio/oe/oe-ti-sobi-sama.mp3" type="audio/mpeg">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
                    <li><section class="music"><p>&ensp; Не йди </p>
                    <audio controls>
-                       <source src="audio/oe/oe-ne-jdy.mp3" type="audio/mpeg" preload="auto">
+                       <source src="audio/oe/oe-ne-jdy.mp3" type="audio/mpeg">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
                    <li><section class="music"><p>&ensp; Без бою </p>
                    <audio controls>
-                       <source src="audio/oe/oe-bez-boju.mp3" type="audio/mpeg" preload="auto">
+                       <source src="audio/oe/oe-bez-boju.mp3" type="audio/mpeg">
                        Ваш браузур не підтримує відтворення mp3
                    </audio>
                    </section></li>
