--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<article class="col2">
 				<ul class="img-bands-about">
 					<li><div class="border-img">
-							<img sytle="z-index: 1;" src="images/bands/oe/oe-01.jpg" alt="okean-elzy.jpg">
+							<img src="images/bands/oe/oe-01.jpg" alt="okean-elzy.jpg">
 						</div>
 					</li>
 					<li><div class="border-img">
