--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
         <link rel="stylesheet" href="css/about.css" type="text/css"/> 
         <link rel="shortcut icon" href="images/ico/g-2-favicon-16x16.png" type="image/png">
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Poiret+One|Righteous|Six+Caps&amp;subset=cyrillic" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Righteous&amp;subset=cyrillic" rel="stylesheet">
 
 </head>
 <body>
@@ -25,16 +25,15 @@
         
         <section class="black-box">
             <p>
-                Hi. My name is Roman Mylenkyi and I am trying to change my life and realize career in software development. 
-                I am a creative junior  front-end developer, enthusiastic, hard working, self motivated individual with 
-                a growing knowledge and experience in a wide range of front-end activities. Actively seeking continued 
-                professional development, enhanced responsibilities and new challenges. And now I am working as a freelance 
+                Hi. My name is Roman Mylenkyi and I am looking for a change in my life 
+                and work on a career in software development. I am a creative junior 
+                front-end developer with growing knowledge and experience in a wide range 
+                of front-end activities. And currently I am working as a freelance 
                 front-end developer.
             </p>
         </section>
   
     </div>    
-
 		
 </body>
 </html>
