clear contacts cod

--- a/contacts.html
+++ b/contacts.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>G-7 Contacts</title>
 
-        <link rel="stylesheet" href="css/contacts.css" type="text/css"/> 
-        <link rel="shortcut icon" href="images/ico/g-2-favicon-16x16.png" type="image/png">
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Poiret+One|Righteous|Six+Caps&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/contacts.css" type="text/css"/> 
+    <link rel="shortcut icon" href="images/ico/g-2-favicon-16x16.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css?family=Righteous&amp;subset=cyrillic" rel="stylesheet">
 
 </head>
 <body>
@@ -35,7 +35,6 @@
                 and ofcourse you can follow me on </span>
                 <a href="https://www.facebook.com/r.mylenjkyj">Facebook</a><span>.</span>
             </p>
-            
         </section>
   
     </div>    
