--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/about.css" type="text/css"/> 
         <link rel="shortcut icon" href="images/ico/g-2-favicon-16x16.png" type="image/png">
         <link href="https://fonts.googleapis.com/css?family=Righteous&amp;subset=cyrillic" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Arbutus+Slab|Days+One|Dosis|Fugaz+One|Josefin+Sans:700|Katibeh|Paytone+One" rel="stylesheet">
 
 </head>
 <body>
@@ -25,9 +26,9 @@
         
         <section class="black-box">
             <p>
-                Hi. My name is Roman Mylenkyi and I am looking for a change in my life 
+                Hi. My name is Roman Mylenkyi. I am looking for a change in my life 
                 and work on a career in software development. I am a creative junior 
-                front-end developer with growing knowledge and experience in a wide range 
+                front-end developer with growing knowledge, experience in a wide range 
                 of front-end activities. And currently I am working as a freelance 
                 front-end developer.
             </p>
