--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/contacts.css" type="text/css"/> 
     <link rel="shortcut icon" href="images/ico/g-2-favicon-16x16.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Righteous&amp;subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arbutus+Slab|Days+One|Dosis|Fugaz+One|Josefin+Sans:700|Katibeh|Paytone+One" rel="stylesheet">
 
 </head>
 <body>
@@ -32,7 +33,7 @@
                 </a><span> or another more simple </span><a href="mailto:i.ua4@i.ua">
                  i.ua4@i.ua </a><span>. You can also find me by these numbers
                 </span>+380 (50) 056 69 16<span> or another </span>+380 (96) 363 24 14<span>
-                and ofcourse you can follow me on </span>
+                and of course you can follow me on </span>
                 <a href="https://www.facebook.com/r.mylenjkyj">Facebook</a><span>.</span>
             </p>
         </section>
