--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/about.css" type="text/css" />
         <link rel="stylesheet" media="(min-width: 665px)" href="css/about-large.css" type="text/css" />
         <link rel="stylesheet" media="(max-width: 664px)" href="css/about-small.css" type="text/css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         
 <!--    <link href="css/index.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" media="(min-width: 651px)" href="css/index-lg.css" type="text/css" />
