--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="images/ico/g-2-favicon-16x16.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Righteous&amp;subset=cyrillic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arbutus+Slab|Days+One|Dosis|Fugaz+One|Josefin+Sans:700|Katibeh|Paytone+One" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
