--- a/oe.html
+++ b/oe.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Poiret+One|Righteous|Six+Caps&amp;subset=cyrillic" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Play:700|Ubuntu:700&amp;subset=cyrillic-ext" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
