--- a/contacts.html
+++ b/contacts.html
@@ -5,9 +5,9 @@
     <title>G-7 About</title>
   
         <link rel="shortcut icon" href="images/ico/g-2-favicon-16x16.png" type="image/png">
-        <link rel="stylesheet" href="css/about.css" type="text/css" />
-        <link rel="stylesheet" media="(min-width: 665px)" href="css/about-large.css" type="text/css" />
-        <link rel="stylesheet" media="(max-width: 664px)" href="css/about-small.css" type="text/css" />
+        <link rel="stylesheet" href="css/contacts.css" type="text/css" />
+        <link rel="stylesheet" media="(min-width: 665px)" href="css/contacts-large.css" type="text/css" />
+        <link rel="stylesheet" media="(max-width: 664px)" href="css/contacts-small.css" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Righteous&amp;subset=cyrillic" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,16 +20,16 @@
             <nav>     
                 <p class="menu">
                    	<a class="menu-button" href="index.html">Home</a>
-                	<a class="menu-button" href="#">About</a>   
-                	<a class="menu-button" href="contacts.html">Contacts</a>
+                	<a class="menu-button" href="about.html">About</a>   
+                	<a class="menu-button" href="#">Contacts</a>
                 </p>
                 
                 <div class="burger-menu-button">
                     <a class="main-title" href="javascript:void(0);" tabindex="1"> &#8801;</a>
                     <ul class="dropdown-menu-section">
                       <li><a class="menu-points" href="index.html">Home</a></li>
-                      <li><a class="menu-points" href="#">About</a></li>
-                      <li><a class="menu-points" href="contacts.html">Contacts</a></li>
+                      <li><a class="menu-points" href="about.html">About</a></li>
+                      <li><a class="menu-points" href="#">Contacts</a></li>
                     </ul>
                 </div>
                 
