some changes to responsive main page

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 							</a>
 						</li>
 						<li id="pt">
-							<a href="#"><span class="number-list">07 &ensp;</span>Піккардійська <span class="arrow"> &ensp;&ensp;&#8226;</span>
-							<br> &ensp;&ensp;Терція
+							<a href="#"><span id="pt-07">07 &ensp;</span>
+							<p id="pt-long">Піккардійська<br>Терція</p><span id="arrow-pt"> &ensp;&ensp; &#8226;</span>
 							</a>
 						</li>
 					</ul>
