some changes to responsive main page

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <div class="burger-menu-button">
                     <a class="main-title" href="javascript:void(0);" tabindex="1"> &#8801;</a>
                     <div class="dropdown-menu-section"> 
-                      <a class="menu-points" href="index.html">Home</a>
+                      <a class="menu-points" href="#">Home</a>
                       <a class="menu-points" href="about.html">About</a>
-                      <a class="menu-points" href="#">Contacts</a>
+                      <a class="menu-points" href="contacts.html">Contacts</a>
                     </div>
                 </div>
             </nav>
