--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<article class="col2">
 				<ul class="img-bands-about">
 					<li><div class="border-img">
-							<img src="images/bands/oe/oe-01.jpg" alt="okean-elzy.jpg">
+							<img id="background-img" src="images/bands/oe/oe-01.jpg" alt="okean-elzy.jpg">
 						</div>
 					</li>
 					<li><div class="border-img">
