--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
 			<article class="col2">
 				<ul class="img-bands-about">
 					<li><div class="border-img">
-							<img id="background-img" src="images/bands/oe/oe-01.jpg" alt="okean-elzy.jpg">
+							<video poster="images/love-ukrainian.jpg" id="bgvid" autoplay muted loop>
+							<source src="images/postcard.mp4" type="video/mp4">
+							</video>
+							<p class="about" id="o-about">&#8211; - - &#8212; - &#8211;  &#8212;- - &#8212; - &#8211; -<span id="about-box"> Вибирай українське</span></p>
 						</div>
 					</li>
 					<li><div class="border-img">
