change main large size window bread crumps

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 							<video poster="images/love-ukrainian.jpg" id="bgvid" autoplay muted loop>
 							<source src="images/postcard.mp4" type="video/mp4">
 							</video>
-							<p class="about" id="o-about">&#8211; - - &#8212; - &#8211;  &#8212;- - &#8212; - &#8211; -<span id="about-box"> Вибирай українське</span></p>
+							<p class="about" id="o-about"><span id="about-line">&#8211; &#8212; &#8211; -&#8211;
+							&#8212 - &#8211; &#8211;</span><span id="about-box"> Вибирай українське</span></p>
 						</div>
 					</li>
 					<li><div class="border-img">
