--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 			</label>
 				
 			<ul class="navigation">
-				<li class="nav-item"><a href="#">&#9751; &nbsp; &nbsp; Home</a></li>
-				<li class="nav-item"><a href="about.html">&#9995; &nbsp; &nbsp; About</a></li>
-				<li class="nav-item"><a href="contacts.html">&#9742; &nbsp; &nbsp; Contacts</a></li>
+				<li class="nav-item"><a href="#">&#9751; &nbsp; Home</a></li>
+				<li class="nav-item"><a href="about.html">&#9995; &nbsp; About</a></li>
+				<li class="nav-item"><a href="contacts.html">&#9742; &nbsp; Contacts</a></li>
 			</ul>
 
 <!--  __________________ the end of first part of slide box  ______________________________  -->
@@ -66,38 +66,38 @@
 						<ul class="list">
 							<li id="oe" >
 								<a href="oe.html"><span class="number-list">01 &ensp;</span>Океан Ельзи
-								<span class="arrow">&ensp;&ensp;&#8226;</span>
+								<span class="ball">&ensp;&ensp;&#8226;</span>
 								</a>
 							</li>
 							<li id="skrjabin">
 								<a href="#skrjabin-1"><span class="number-list">02 &ensp;</span>Скрябін
-								<span class="arrow">&ensp;&ensp;&#8226;</span>
+								<span class="ball">&ensp;&ensp;&#8226;</span>
 								</a>	
 							</li>
 							<li id="tartak">
 								<a	href="#"><span class="number-list">03 &ensp;</span>Тартак
-								<span class="arrow">&ensp;&ensp;&#8226;</span>
+								<span class="ball">&ensp;&ensp;&#8226;</span>
 								</a>
 							</li>
 							<li id="skaj">
 								<a href="#"><span class="number-list">04 &ensp;</span>Скай
-								<span class="arrow">&ensp;&ensp;&#8226;</span>
+								<span class="ball">&ensp;&ensp;&#8226;</span>
 								</a>
 							</li>
 							<li id="bumbox">
 								<a	href="#"><span class="number-list">05 &ensp;</span>Бумбокс
-								<span class="arrow">&ensp;&ensp;&#8226;</span>
+								<span class="ball">&ensp;&ensp;&#8226;</span>
 								</a>
 							</li>
 							
 							<li id="tnmk">
 								<a href="#"><span class="number-list">06 &ensp;</span>ТНМК
-								<span class="arrow">&ensp;&ensp;&#8226;</span>
+								<span class="ball">&ensp;&ensp;&#8226;</span>
 								</a>
 							</li>
 							<li id="pt">
-								<a href="#"><span id="pt-07">07 &ensp;</span>
-								<p id="pt-long">Піккардійська<br>Терція</p><span id="arrow-pt"> &ensp;&ensp; &#8226;</span>
+								<a href="#"><span id="pt-07">07 &ensp; </span>
+								<p id="pt-long">Піккардійська<br>Терція</p><span id="ball-pt"> &ensp;&ensp; &#8226;</span>
 								</a>
 							</li>
 						</ul>
